--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,11 @@
 {
   "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
+    "api/index.py": {
+      "runtime": "python@3.9"
     }
   },
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/index.html"
-    }
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/(.*)", "dest": "/api/index.py" }
   ]
 }
