--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
-  "functions": {
-    "api/index.py": {
-      "runtime": "python@3.9"
-    }
-  },
   "routes": [
     { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/api/index.py" }
+    { "src": "/api/(.*)", "dest": "/api/index.py" }
   ]
 }
